--- a/ttreeGradle/src/main/resources/templates/changePW.html
+++ b/ttreeGradle/src/main/resources/templates/changePW.html
@@ -9,12 +9,13 @@
             border-top: 3px solid black;
             padding: 8px;
         }
-        p{
+
+        p {
             font-size: 15pt;
             font-weight: bold;
         }
 
-        input[type=password]{
+        input[type=password] {
             font-size: 20px;
         }
 
@@ -28,7 +29,7 @@
             cursor: pointer;
         }
 
-        .buttonWrapper{
+        .buttonWrapper {
             text-align: center;
         }
 
@@ -36,37 +37,25 @@
             opacity: 0.7;
         }
     </style>
-    <script>
-        function check_pw(){
-            if (document.getElementById('newPW').value != '' && document.getElementById('newPW_check').value != '') {
-                if (document.getElementById('newPW').value == document.getElementById('newPW_check').value) {
-                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
-                    document.getElementById('check').style.color = 'blue';
-                } else {
-                    document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
-                    document.getElementById('check').style.color = 'red';
-                }
-            }
-        }
-    </script>
 </head>
 <body>
-<form role="form" action="/changePW" id="changePW" method="POST">
+<form role="form" action="/changePW" id="changePW" method="POST" onsubmit="return checkCondition();">
     <h2>✔비밀번호 수정</h2>
     <div class="oldPW">
         <p>현재 비밀번호 입력:</p>
         <input type="password" id="oldpw" value="" name="oldpw"
-               required minlength="6" maxlength="10">
+               required minlength="6">
     </div>
     <br>
     <div class="PW">
         <p>새로운 비밀번호 입력:</p>
-        <input type="password" id="newPW" value="" name="pass"
-               required minlength="6" maxlength="10" onchange="check_pw()">
+        <input type="password" id="newPW" onkeyup="check_pw();" onchange="pw_format()" value="" name="pass"
+               required minlength="6">
 
         <p>비밀번호 확인:</p>
-        <input type="password" id="newPW_check" value="" name="pass"
-               required minlength="6" maxlength="10" onchange="check_pw()">
+        <input type="password" id="newPW_check" onkeyup="check_pw();" onchange="pw_format()" value=""
+               name="password_check"
+               required minlength="6">
         <br> <span id="check"></span>
     </div>
     <br> </td>
@@ -75,16 +64,74 @@
             비밀번호 변경하기
         </button>
     </div>
-
-    <script type="text/javascript">
-        if ([[${isChanged}]]) {
-            alert('비밀번호가 변경되었습니다. 다음 로그인부터 반영됩니다.');
-            window.close();
-        } else {
-            alert('현재 비밀번호가 일치하지 않습니다.')
-        }
-    </script>
 </form>
+
+<script>
+    let check_password;
+
+    function check_pw() {
+        var pw = document.getElementById('pw').value;
+        var SC = ["!", "@", "$", "&", "*"];
+        var check_SC = 0;
+
+        for (var i = 0; i < SC.length; i++) {
+            if (pw.indexOf(SC[i]) != -1) {
+                check_SC = 1;
+            }
+        }
+
+        if (check_SC == 0) {
+            check_password = false;
+        }
+
+        if (document.getElementById('newPW').value != '' && document.getElementById('newPW_check').value != '') {
+            if (document.getElementById('newPW').value == document.getElementById('newPW_check').value) {
+                document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치합니다.'
+                document.getElementById('check').style.color = 'blue';
+                check_password = true;
+            } else {
+                document.getElementById('check').innerHTML = '입력하신 비밀번호가 일치하지 않습니다.'
+                document.getElementById('check').style.color = 'red';
+                check_password = false;
+            }
+        }
+    }
+
+    function pw_format() {
+        var pw = document.getElementById('pw').value;
+        var SC = ["!", "@", "$", "&", "*"];
+        var check_SC = 0;
+
+        for (var i = 0; i < SC.length; i++) {
+            if (pw.indexOf(SC[i]) != -1) {
+                check_SC = 1;
+            }
+        }
+
+        if (check_SC == 0) {
+            window.alert("!, @, $, &, * 를 포함하여 비밀번호를 입력하여주세요!")
+            check_password = false;
+            document.getElementById('pw').value = '';
+        }
+    }
+
+    if ([[${isChanged}]]) {
+        alert('비밀번호가 변경되었습니다. 다음 로그인부터 반영됩니다.');
+        window.close();
+    } else {
+        alert('현재 비밀번호가 일치하지 않습니다.')
+    }
+
+    function checkCondition() {
+        if (check_password) {
+            return true;
+        } else {
+            window.alert("비밀번호와 비밀번호 확인이 일치하지 않습니다!");
+            return false;
+        }
+    }
+
+</script>
 
 
 </body>
