fix projectRules and projectNotes to make button center-align and fix sideblank height on projectDetails

--- a/ttreeGradle/src/main/resources/templates/projectNotes.html
+++ b/ttreeGradle/src/main/resources/templates/projectNotes.html
@@ -8,6 +8,7 @@
         .ck-editor__editable{
             min-height: 500px;
         }
+
     </style>
 </th:block>
 
@@ -31,8 +32,10 @@
                     </textarea>
                 </div>
                 <br><br><br>
+                <div style="text-align: center;">
                 <input class="btn btn-primary" type="submit" role="button" value="저장">
                 <input class="btn btn-primary" role="button" value="게시글 보기" onclick="location.href='projectNotesSaved'">
+                </div>
             </form>
         </article>
         <script type="text/javascript">
