--- a/ttreeGradle/src/main/resources/templates/projectDetail.html
+++ b/ttreeGradle/src/main/resources/templates/projectDetail.html
@@ -13,6 +13,10 @@
         th, td{
             padding: 10px;
         }
+        .leftsideblank, .rightsideblank {
+            width: 15%;
+            height: auto;
+        }
     </style>
 </th:block>
 
