--- a/ttreeGradle/src/main/resources/templates/projectDetail.html
+++ b/ttreeGradle/src/main/resources/templates/projectDetail.html
@@ -45,17 +45,17 @@
                     </p>
                     <hr/>
 
-                    <p class="card-text" style="font-size: 18pt; font-weight: bold">개발목적</p>
+                    <p class="card-text" style="font-size: 18pt; font-weight: bold">개발목적 (서론)</p>
                     <p style="font-size: 13pt; line-height: 2.2;"
                             th:text="${post.purpose}"></p>
                     <br>
 
-                    <p class="card-text" style="font-size: 18pt; font-weight: bold">프로젝트 설명</p>
+                    <p class="card-text" style="font-size: 18pt; font-weight: bold">프로젝트 설명 (요약)</p>
                     <p style="font-size: 13pt; line-height: 2.2;"
                             th:text="${post.content}"></p>
                     <br>
 
-                    <p class="card-text" style="font-size: 18pt; font-weight: bold">기대효과</p>
+                    <p class="card-text" style="font-size: 18pt; font-weight: bold">기대효과 (결론)</p>
                     <p style="font-size: 13pt; line-height: 2.2;"
                             th:text="${post.effect}"></p>
 
