--- a/ttreeGradle/src/main/resources/templates/projectEdit.html
+++ b/ttreeGradle/src/main/resources/templates/projectEdit.html
@@ -75,20 +75,20 @@
                         </td>
                     </tr>
                     <tr>
-                        <td> 개발 목적 </td>
+                        <td> 개발 목적 (서론) </td>
                         <td>
                             <textarea type="text" name="purpose" class="form-control" id="inputPurpose" cols="40" rows="10" th:text="${post.purpose}"> </textarea>
                         </td>
                     </tr>
 
                     <tr>
-                        <td> 프로젝트 설명 </td>
+                        <td> 프로젝트 설명 (요약) </td>
                         <td>
                             <textarea type="text" name="content" class="form-control" id="inputContent" cols="40" rows="10" th:text="${post.content}"> </textarea>
                         </td>
                     </tr>
                     <tr>
-                        <td> 기대효과 </td>
+                        <td> 기대효과 (결론) </td>
                         <td>
                             <textarea type="text" name="effect" class="form-control" id="inputEffect" cols="40" rows="10" th:text="${post.effect}"> </textarea>
                         </td>
