--- a/ttreeGradle/src/main/resources/templates/projectListAfterSearch.html
+++ b/ttreeGradle/src/main/resources/templates/projectListAfterSearch.html
@@ -112,6 +112,7 @@
                     <th scope="col" style="text-align: center">제목</th>
                     <th scope="col" style="text-align: center">연도</th>
                     <th scope="col" style="text-align: center">학기</th>
+                    <th scope="col" style="text-align: center">언어</th>
                     <th scope="col" style="text-align: center">작성일</th>
                     <th scope="col" style="text-align: center">조회수</th>
                 </tr>
@@ -129,6 +130,9 @@
                     </td>
                     <td>
                         <p th:text="${post.semester}"></p>
+                    </td>
+                    <td>
+                        <p th:text="${post.languages}"></p>
                     </td>
                     <td>
                         <p th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm')}"></p>
