--- a/ttreeGradle/src/main/resources/templates/projectPost.html
+++ b/ttreeGradle/src/main/resources/templates/projectPost.html
@@ -23,7 +23,7 @@
                     <form action="/projectPost" method="post" enctype="multipart/form-data">
                         <tr>
                             <td> 프로젝트 이름 </td>
-                            <td><input type="text" name="title" required></td>
+                            <td><input type="text" name="title" size="70" required></td>
                         </tr>
                         <tr>
                             <td> 연도/학기 </td>
@@ -74,20 +74,20 @@
                         </tr>
                         </tr>
                         <tr>
-                            <td> 개발 목적 </td>
+                            <td> 개발 목적 (서론) </td>
                             <td>
                                 <textarea type="text" name="purpose" class="form-control" id="inputPurpose" cols="40" rows="10"></textarea>
                             </td>
                         </tr>
 
                         <tr>
-                            <td> 프로젝트 설명 </td>
+                            <td> 프로젝트 설명 (요약) </td>
                             <td>
                                 <textarea type="text" name="content" class="form-control" id="inputContent" cols="40" rows="10"></textarea>
                             </td>
                         </tr>
                         <tr>
-                            <td> 기대효과 </td>
+                            <td> 기대효과 (결론) </td>
                             <td>
                                 <textarea type="text" name="effect" class="form-control" id="inputEffect" cols="40" rows="10"></textarea>
                             </td>
@@ -97,8 +97,8 @@
                             <td> 제안서 파일 </td>
                             <td>
                                 <div class="custom-file" id="inputProposalFile">
-                                    <input name="proposalFile" type="file" class="custom-file-input" id="customProposalFile">
                                     <label class="custom-file-label" for="customProposalFile">파일을 선택해 주세요.</label>
+                                    <input name="proposalFile" type="file" class="custom-file-input" id="customProposalFile">
                                 </div>
                             </td>
                         </tr>
@@ -106,8 +106,8 @@
                             <td> 최종발표 자료 </td>
                             <td>
                                 <div class="custom-file" id="inputFinalPTFile">
-                                    <input name="finalPTFile" type="file" class="custom-file-input" id="customFinalPTFile">
                                     <label class="custom-file-label" for="customFinalPTFile">파일을 선택해 주세요.</label>
+                                    <input name="finalPTFile" type="file" class="custom-file-input" id="customFinalPTFile">
                                 </div>
                             </td>
                         </tr>
@@ -115,8 +115,8 @@
                             <td> 전시회 자료 </td>
                             <td>
                                 <div class="custom-file" id="inputFairFile">
-                                    <input name="fairFile" type="file" class="custom-file-input" id="customFairFile">
                                     <label class="custom-file-label" for="customFairFile">파일을 선택해 주세요.</label>
+                                    <input name="fairFile" type="file" class="custom-file-input" id="customFairFile">
                                 </div>
                             </td>
                         </tr>
@@ -124,8 +124,8 @@
                             <td> 소스코드 파일 </td>
                             <td>
                                 <div class="custom-file" id="inputSourceFile">
-                                    <input name="sourceFile" type="file" class="custom-file-input" id="customSourceFile">
                                     <label class="custom-file-label" for="customSourceFile">파일을 선택해 주세요.</label>
+                                    <input name="sourceFile" type="file" class="custom-file-input" id="customSourceFile">
                                 </div>
                             </td>
                         </tr>
@@ -133,8 +133,9 @@
                             <td> 논문 파일 </td>
                             <td>
                                 <div class="custom-file" id="inputPapaerFile">
-                                    <input name="paperFile" type="file" class="custom-file-input" id="customPaperFile">
                                     <label class="custom-file-label" for="customPaperFile">파일을 선택해 주세요.</label>
+                                    <input name="paperFile" type="file" class="custom-file-input" id="customPaperFile">
+
                                 </div>
                             </td>
                         </tr>
