--- a/ttreeGradle/src/main/resources/templates/fragments/sidebar.html
+++ b/ttreeGradle/src/main/resources/templates/fragments/sidebar.html
@@ -12,8 +12,12 @@
                style="font-weight: bold; font-size: 15px;"> 회원가입 승인 </a>
         </li>
         <li>
+            <a href="/admin/manageStudent"
+               style="font-weight: bold; font-size: 15px;"> 학생 관리 </a>
+        </li>
+        <li>
             <a href="/admin/updateStatus"
-               style="font-weight: bold; font-size: 15px;"> 학생/팀 관리 </a>
+               style="font-weight: bold; font-size: 15px;"> 팀 관리 </a>
         </li>
     </ul>
 </aside>
