--- a/ttreeGradle/src/main/resources/static/css/adminUserApprovalStyle.css
+++ b/ttreeGradle/src/main/resources/static/css/adminUserApprovalStyle.css
@@ -128,3 +128,19 @@ select {
     cursor: pointer;
     float: right;
 }
+
+.step .tip {
+    visibility: hidden;
+    background-color: black;
+    opacity: 0.8;
+    color: #fff;
+    text-align: center;
+    border-radius: 3px;
+    padding: 1px 1px;
+    position: absolute;
+    z-index: 1;
+}
+
+.step:hover .tip {
+    visibility: visible;
+}
