--- a/ttreeGradle/src/main/resources/templates/adminManageStudent.html
+++ b/ttreeGradle/src/main/resources/templates/adminManageStudent.html
@@ -61,25 +61,15 @@
                     <th scope="col" style="text-align: center">학기</th>
                     <th scope="col" style="text-align: center">팀 이름</th>
                 </tr>
-                <tr class="text-center" th:each="user : ${userList}">
-                        <td>
-                            <p th:text="${user.user_id}"></p>
-                        </td>
-                        <td>
-                            <p th:text="${user.studentIdNum}"></p>
-                        </td>
-                        <td>
-                            <p th:text="${user.name}"></p>
-                        </td>
-                        <td>
-                            <p th:text="${user.major1}"></p>
-                        </td>
-                        <td>
-                            <p th:text="${user.major2}"></p>
-                        </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <tr class="text-center" th:each="student : ${studentList}">
+                    <td><p th:text="${student.userDto.user_id}"></td>
+                    <td><p th:text="${student.userDto.studentIdNum}"></p></td>
+                    <td><p th:text="${student.userDto.name}"></p></td>
+                    <td><p th:text="${student.userDto.major1}"></p></td>
+                    <td><p th:text="${student.userDto.major2}"></p></td>
+                    <td><p th:text="${student.teamDto?.teamYear}"></p></td>
+                    <td><p th:text="${student.teamDto?.teamSemester}"></p></td>
+                    <td><p th:text="${student.teamDto?.teamName}"></p></td>
                     </form>
                 </tr>
             </table>
