--- a/ttreeGradle/src/main/resources/templates/adminManageStudent.html
+++ b/ttreeGradle/src/main/resources/templates/adminManageStudent.html
@@ -23,7 +23,7 @@
             <h1>학생 관리</h1>
             <div>
                 <button id="createUserButton" onclick="window.open('/admin/createUser', 'adminCreateUser', 'width=600 height= 500'); return false">
-                    회원 생성</button>
+                    회원 생성/정보 수정</button>
             </div>
             <table>
                 <tr>
