--- a/ttreeGradle/src/main/resources/templates/projectPost.html
+++ b/ttreeGradle/src/main/resources/templates/projectPost.html
@@ -118,6 +118,10 @@
                                     <label class="custom-file-label" for="customFairFile">파일을 선택해 주세요.</label>
                                     <input name="fairFile" type="file" class="custom-file-input" id="customFairFile">
                                 </div>
+                                <br>
+                                <label for="customLink">전시회 링크: </label>
+                                <input type="text" name="link" id="customLink" size="40">
+                                <p style="color: red; font-size: 10pt;">* http:// 나 https:// 까지 붙여서 입력해주세요</p>
                             </td>
                         </tr>
                         <tr>
