--- a/ttreeGradle/src/main/resources/templates/adminUpdateStatus.html
+++ b/ttreeGradle/src/main/resources/templates/adminUpdateStatus.html
@@ -5,6 +5,54 @@
 <!-- 해당페이지 고유 CSS 추가 -->
 <th:block layout:fragment="css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/adminUserApprovalStyle.css}">
+    <style>
+        /* Tooltip container */
+        .step {
+            position: relative;
+            display: inline-block;
+            //border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+        }
+
+        /* Tooltip text */
+        .step .tip {
+            visibility: hidden;
+            width: 150px;
+            background-color: #555;
+            color: #fff;
+            text-align: center;
+            padding: 5px 0;
+            border-radius: 6px;
+
+            /* Position the tooltip text */
+            position: absolute;
+            z-index: 1;
+            bottom: 125%;
+            left: 50%;
+            margin-left: -60px;
+
+            /* Fade in tooltip */
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        /* Tooltip arrow */
+        .step .tip::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 40%;
+            margin-left: -10px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #555 transparent transparent transparent;
+        }
+
+        /* Show the tooltip text when you mouse over the tooltip container */
+        .step:hover .tip {
+            visibility: visible;
+            opacity: 1;
+        }
+    </style>
 </th:block>
 
 <!-- 해당페이지 고유 스크립트 추가 -->
@@ -52,14 +100,14 @@
                     <th scope="col" style="text-align: center">연도</th>
                     <th scope="col" style="text-align: center">학기</th>
                     <th scope="col" style="text-align: center">팀</th>
-                    <th scope="col" style="text-align: center"><div class="step">1차
-                        <span class="tip">졸프 팀명, 인원, 학생 정보 신청</span></div></th>
-                    <th scope="col" style="text-align: center"><div class="step">2차
+                    <th scope="col" style="text-align: center"><div class="step">1차&#9432;
+                        <span class="tip" >졸프 팀명, 인원, <br> 학생 정보 신청</span></div></th>
+                    <th scope="col" style="text-align: center"><div class="step">2차&#9432;
                         <span class="tip">심사 영상 제출</span></div></th>
-                    <th scope="col" style="text-align: center"><div class="step">3차
-                        <span class="tip">전시회 영상 업로드</span></div></th>
-                    <th scope="col" style="text-align: center"><div class="step">4차
-                        <span class="tip">졸업논문 및 코드 제출</span></div></th>
+                    <th scope="col" style="text-align: center"><div class="step">3차&#9432;
+                        <span class="tip">전시회 영상 <br> 업로드</span></div></th>
+                    <th scope="col" style="text-align: center"><div class="step">4차&#9432;
+                        <span class="tip">졸업논문 및 <br> 코드 제출</span></div></th>
                     <th scope="col" style="text-align: center">최종</th>
                     <th scope="col" style="text-align: center">사유</th>
                 </tr>
