CHANGE TO SHOW ONLY STUDENTS' INFO ON ADMIN MANAGE STUDENT

--- a/ttreeGradle/src/main/resources/static/css/adminUserApprovalStyle.css
+++ b/ttreeGradle/src/main/resources/static/css/adminUserApprovalStyle.css
@@ -110,7 +110,7 @@ select {
     text-align-last: center;
 }
 
-#selectTeamYear {
+#selectTeamYear, #getInfoSearch, #getTeamSearch {
     background-color: #003087;
     color: white;
     border: none;
