ABLE TO DOWNLOAD REGISTER FILE ON PROJECT PROCESS

--- a/ttreeGradle/src/main/resources/templates/projectProcess.html
+++ b/ttreeGradle/src/main/resources/templates/projectProcess.html
@@ -34,7 +34,13 @@
       <br>
 
       <h3>◼ 졸업작품 신청서</h3>
-      <a href="/mail" class="downloadBox">IT공학과_졸업작품신청서.hwp</a>
+      <table>
+        <tr>
+          <td><a href="/projectProcess/download" class="downloadBox">IT공학과_졸업작품신청서.hwp</a></td>
+          <td><a href="/projectProcess/upload" class="downloadBox">졸업작품 신청서 제출</a></td>
+        </tr>
+      </table>
+
       <br><br><br><br>
 
       <h3>◼ 졸업논문 작성절차</h3>
